# kanflow

./: .env.example  .env.production.example  .gitignore  DEPLOY.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: checks.yml  deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/accounts/: models.py  serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/boards/: admin.py  broadcast.py  consumers.py  middleware.py  models.py  permissions.py  positioning.py  serializers.py  services.py  urls.py  views.py
backend/boards/migrations/: 0001_initial.py
backend/config/: asgi.py  settings.py  urls.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.js  main.ts  types.ts
frontend/src/api/: http.js  http.ts  ws.js  ws.ts
frontend/src/assets/: main.css
frontend/src/components/: BoardCard.vue  BoardColumn.vue  ThemeToggle.vue
frontend/src/router/: index.js  index.ts
frontend/src/stores/: auth.js  auth.ts  board.js  board.ts
frontend/src/views/: BoardView.vue  BoardsListView.vue  LoginView.vue
