[project]
name = "kanflow-backend"
version = "0.1.0"
description = "Kanflow — backend канбан-доски (Django + DRF + Channels)"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1,<5.2",
    "djangorestframework>=3.15,<3.16",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "channels[daphne]>=4.1,<5.0",
    # Нужен только при переключении channel layer на Redis (REDIS_URL).
    # Оставлен в зависимостях, чтобы масштабирование было конфигом, а не установкой пакета.
    "channels-redis>=4.2,<5.0",
    "psycopg[binary]>=3.2,<4.0",
    "django-cors-headers>=4.4,<5.0",
    "django-environ>=0.11,<1.0",
    # Раздача статики (нужна только админке) из самого ASGI-процесса:
    # daphne, в отличие от runserver, статику не отдаёт ни в dev, ни в проде.
    "whitenoise>=6.7,<7.0",
    "django-stubs-ext>=5.1",
]

[dependency-groups]
dev = [
    "django-stubs>=5.1",
    "mypy>=1.11",
    "ruff>=0.9",
]

[tool.uv]
# Это приложение, а не библиотека: uv ставит только зависимости,
# сам проект как пакет в окружение не устанавливается.
package = false

[tool.ruff]
target-version = "py313"
line-length = 100
# Миграции генерирует Django — их стиль не наша забота
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle: ошибки стиля
    "W",   # pycodestyle: предупреждения
    "F",   # pyflakes: неиспользуемые импорты/переменные, undefined names
    "I",   # isort: порядок импортов
    "UP",  # pyupgrade: устаревший синтаксис (например, Optional[X] → X | None)
    "B",   # bugbear: типичные баги (мутабельные дефолты и т.п.)
    "DJ",  # flake8-django: Django-специфичные проверки
    "SIM", # simplify: избыточные конструкции
]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
# Сторонние библиотеки без type stubs (DRF, channels, simplejwt, environ) —
# их отсутствие не считаем ошибкой, чтобы мягкий режим не тонул в шуме.
ignore_missing_imports = true
check_untyped_defs = true
# Миграции генерирует Django — их не проверяем.
exclude = ['/migrations/']

[tool.django-stubs]
django_settings_module = "config.settings"
